hphp/hack/test/typecheck/new_inference/eager_solve/circular_bug_2.php.like_types.exp
File "circular_bug_2.php", line 9, characters 16-25:
  There are remaining unsolved constraints!: FALSE
File "circular_bug_2.php", line 27, characters 36-38:
Invalid argument (Typing[4110])
File "circular_bug_2.php", line 14, characters 22-23:
Some type constraint(s) are violated here
File "circular_bug_2.php", line 14, characters 22-23:
Tk is a constrained type parameter
File "circular_bug_2.php", line 10, characters 3-10:
Expected arraykey
File "circular_bug_2.php", line 14, characters 22-23:
But got dynamic
